--- a/public/04-press-center.html
+++ b/public/04-press-center.html
@@ -8,7 +8,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1.0,  shrink-to-fit=no">
 		<link type="image/ico" href="img/favicon.ico" rel="shortcut icon"><meta name="format-detection" content="telephone=no"> <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;500;600&display=swap" rel="stylesheet">
 		<link href="libs/swiper/swiper-bundle.min.css" rel="stylesheet"/>
 		<link href="libs/@fancyapps/ui/fancybox.css" rel="stylesheet"/>
 		<link href="css/main.min.css" rel="stylesheet"/>
@@ -472,6 +472,173 @@
 				</div>
 			</section>
 			<!-- end sNews-->
+			<!-- start sEventsList-->
+			<section class="sEventsList section bg-dark section section--vh" id="sEventsList">
+				<div class="container">
+					<h2>Мероприятия</h2>
+					<div class="tabs">
+						<div class="tabs__caption">
+							<div class="tabs__btn active">Offline</div>
+							<div class="tabs__btn">Online</div>
+						</div>
+						<div class="tabs-content-wrap">
+							<div class="tabs__content active">
+								<a class="event-item" href="#">
+									<div class="event-item__pic"><img src="img/event-item.jpg" alt=""/>
+									</div>
+									<div class="event-item__info-block">
+										<div class="event-item__date-block">
+											<div class="event-item__date-number">03
+											</div>
+											<div class="event-item__date-text">Сентября 2022
+											</div>
+										</div>
+										<div class="event-item__caption-wrap">
+											<div class="event-item__title">Проект в&nbsp;&laquo;Сталепромышленной компании&raquo; получил Серебро в&nbsp;конкурсе SAP Quality Awards 2019
+											</div>
+											<div class="event-item__caption">Проект в&nbsp;&laquo;Сталепромышленной компании&raquo; получил Серебро в&nbsp;конкурсе SAP Quality Awards 2019
+											</div>
+											<div class="event-item__link"><span>Хочу пойти</span>
+												<svg class="icon icon-chevron-right ">
+													<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+												</svg>
+											</div>
+										</div>
+									</div>
+								</a>
+								<a class="event-item" href="#">
+									<div class="event-item__pic"><img src="img/event-item.jpg" alt=""/>
+									</div>
+									<div class="event-item__info-block">
+										<div class="event-item__date-block">
+											<div class="event-item__date-number">12
+											</div>
+											<div class="event-item__date-text">Августа 2022
+											</div>
+										</div>
+										<div class="event-item__caption-wrap">
+											<div class="event-item__title">Завершено внедрение решения по&nbsp;управлению персоналом для Группы НЛМК
+											</div>
+											<div class="event-item__caption">Компания SAPRUN Group завершила внедрение решения по&nbsp;управлению персоналом на&nbsp;базе SAP ERP Human Capital Management для Группы НЛМК
+											</div>
+											<div class="event-item__link"><span>Хочу пойти</span>
+												<svg class="icon icon-chevron-right ">
+													<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+												</svg>
+											</div>
+										</div>
+									</div>
+								</a>
+								<a class="event-item" href="#">
+									<div class="event-item__pic"><img src="img/event-item.jpg" alt=""/>
+									</div>
+									<div class="event-item__info-block">
+										<div class="event-item__date-block">
+											<div class="event-item__date-number">21
+											</div>
+											<div class="event-item__date-text">Июля 2022
+											</div>
+										</div>
+										<div class="event-item__caption-wrap">
+											<div class="event-item__title">Платформа S/4HANA запущена в&nbsp;Металлоинвест.
+											</div>
+											<div class="event-item__caption">Проект реализовывался с&nbsp;участием SAPRUN Group. Впервые в&nbsp;России платформа S/4HANA внедрена в&nbsp;масштабе такой компании как Металлоинвест.
+											</div>
+											<div class="event-item__link"><span>Хочу пойти</span>
+												<svg class="icon icon-chevron-right ">
+													<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+												</svg>
+											</div>
+										</div>
+									</div>
+								</a>
+								<button class="sEventsList__more"><span>Показать ещё</span>
+									<svg class="icon icon-chevron-down ">
+										<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
+									</svg>
+								</button>
+							</div>
+							<div class="tabs__content">
+								<a class="event-item" href="#">
+									<div class="event-item__pic"><img src="img/event-item.jpg" alt=""/>
+									</div>
+									<div class="event-item__info-block">
+										<div class="event-item__date-block">
+											<div class="event-item__date-number">03
+											</div>
+											<div class="event-item__date-text">Сентября 2022
+											</div>
+										</div>
+										<div class="event-item__caption-wrap">
+											<div class="event-item__title">Проект в&nbsp;&laquo;Сталепромышленной компании&raquo; получил Серебро в&nbsp;конкурсе SAP Quality Awards 2019
+											</div>
+											<div class="event-item__caption">Проект в&nbsp;&laquo;Сталепромышленной компании&raquo; получил Серебро в&nbsp;конкурсе SAP Quality Awards 2019
+											</div>
+											<div class="event-item__link"><span>Хочу пойти</span>
+												<svg class="icon icon-chevron-right ">
+													<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+												</svg>
+											</div>
+										</div>
+									</div>
+								</a>
+								<a class="event-item" href="#">
+									<div class="event-item__pic"><img src="img/event-item.jpg" alt=""/>
+									</div>
+									<div class="event-item__info-block">
+										<div class="event-item__date-block">
+											<div class="event-item__date-number">12
+											</div>
+											<div class="event-item__date-text">Августа 2022
+											</div>
+										</div>
+										<div class="event-item__caption-wrap">
+											<div class="event-item__title">Завершено внедрение решения по&nbsp;управлению персоналом для Группы НЛМК
+											</div>
+											<div class="event-item__caption">Компания SAPRUN Group завершила внедрение решения по&nbsp;управлению персоналом на&nbsp;базе SAP ERP Human Capital Management для Группы НЛМК
+											</div>
+											<div class="event-item__link"><span>Хочу пойти</span>
+												<svg class="icon icon-chevron-right ">
+													<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+												</svg>
+											</div>
+										</div>
+									</div>
+								</a>
+								<a class="event-item" href="#">
+									<div class="event-item__pic"><img src="img/event-item.jpg" alt=""/>
+									</div>
+									<div class="event-item__info-block">
+										<div class="event-item__date-block">
+											<div class="event-item__date-number">21
+											</div>
+											<div class="event-item__date-text">Июля 2022
+											</div>
+										</div>
+										<div class="event-item__caption-wrap">
+											<div class="event-item__title">Платформа S/4HANA запущена в&nbsp;Металлоинвест.
+											</div>
+											<div class="event-item__caption">Проект реализовывался с&nbsp;участием SAPRUN Group. Впервые в&nbsp;России платформа S/4HANA внедрена в&nbsp;масштабе такой компании как Металлоинвест.
+											</div>
+											<div class="event-item__link"><span>Хочу пойти</span>
+												<svg class="icon icon-chevron-right ">
+													<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+												</svg>
+											</div>
+										</div>
+									</div>
+								</a>
+								<button class="sEventsList__more"><span>Показать ещё</span>
+									<svg class="icon icon-chevron-down ">
+										<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
+									</svg>
+								</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- end sEventsList-->
 			<footer class="footer">
 				<div class="footer__block container">
 					<div class="row">
