--- a/public/05-work.html
+++ b/public/05-work.html
@@ -238,173 +238,46 @@
 				</div>
 			</section>
 			<!-- end sValueProposition-->
-			<!-- start sEventsList-->
-			<section class="sEventsList section bg-dark section section--vh" id="sEventsList">
+			<!-- start sNumericalIndicators-->
+			<section class="sNumericalIndicators section bg-dark section section--vh" id="sNumericalIndicators">
 				<div class="container">
-					<h2>Мероприятия</h2>
-					<div class="tabs">
-						<div class="tabs__caption">
-							<div class="tabs__btn active">Offline</div>
-							<div class="tabs__btn">Online</div>
-						</div>
-						<div class="tabs-content-wrap">
-							<div class="tabs__content active">
-								<a class="event-item" href="#">
-									<div class="event-item__pic"><img src="img/event-item.jpg" alt=""/>
-									</div>
-									<div class="event-item__info-block">
-										<div class="event-item__date-block">
-											<div class="event-item__date-number">03
-											</div>
-											<div class="event-item__date-text">Сентября 2022
-											</div>
-										</div>
-										<div class="event-item__caption-wrap">
-											<div class="event-item__title">Проект в&nbsp;&laquo;Сталепромышленной компании&raquo; получил Серебро в&nbsp;конкурсе SAP Quality Awards 2019
-											</div>
-											<div class="event-item__caption">Проект в&nbsp;&laquo;Сталепромышленной компании&raquo; получил Серебро в&nbsp;конкурсе SAP Quality Awards 2019
-											</div>
-											<div class="event-item__link"><span>Хочу пойти</span>
-												<svg class="icon icon-chevron-right ">
-													<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
-												</svg>
-											</div>
-										</div>
-									</div>
-								</a>
-								<a class="event-item" href="#">
-									<div class="event-item__pic"><img src="img/event-item.jpg" alt=""/>
-									</div>
-									<div class="event-item__info-block">
-										<div class="event-item__date-block">
-											<div class="event-item__date-number">12
-											</div>
-											<div class="event-item__date-text">Августа 2022
-											</div>
-										</div>
-										<div class="event-item__caption-wrap">
-											<div class="event-item__title">Завершено внедрение решения по&nbsp;управлению персоналом для Группы НЛМК
-											</div>
-											<div class="event-item__caption">Компания SAPRUN Group завершила внедрение решения по&nbsp;управлению персоналом на&nbsp;базе SAP ERP Human Capital Management для Группы НЛМК
-											</div>
-											<div class="event-item__link"><span>Хочу пойти</span>
-												<svg class="icon icon-chevron-right ">
-													<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
-												</svg>
-											</div>
-										</div>
-									</div>
-								</a>
-								<a class="event-item" href="#">
-									<div class="event-item__pic"><img src="img/event-item.jpg" alt=""/>
-									</div>
-									<div class="event-item__info-block">
-										<div class="event-item__date-block">
-											<div class="event-item__date-number">21
-											</div>
-											<div class="event-item__date-text">Июля 2022
-											</div>
-										</div>
-										<div class="event-item__caption-wrap">
-											<div class="event-item__title">Платформа S/4HANA запущена в&nbsp;Металлоинвест.
-											</div>
-											<div class="event-item__caption">Проект реализовывался с&nbsp;участием SAPRUN Group. Впервые в&nbsp;России платформа S/4HANA внедрена в&nbsp;масштабе такой компании как Металлоинвест.
-											</div>
-											<div class="event-item__link"><span>Хочу пойти</span>
-												<svg class="icon icon-chevron-right ">
-													<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
-												</svg>
-											</div>
-										</div>
-									</div>
-								</a>
-								<button class="sEventsList__more"><span>Показать ещё</span>
-									<svg class="icon icon-chevron-down ">
-										<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
-									</svg>
-								</button>
+					<div class="sNumericalIndicators__wrap">
+						<div class="sNumericalIndicators__title-block">
+							<h2>SAPRUN</h2>
+							<div class="sNumericalIndicators__caption">Более 13&nbsp;лет работаем над тем, чтобы быть лучшей консалтинговой компанией в&nbsp;сфере внедрения ИТ-решений для бизнеса
 							</div>
-							<div class="tabs__content">
-								<a class="event-item" href="#">
-									<div class="event-item__pic"><img src="img/event-item.jpg" alt=""/>
+							<a class="sNumericalIndicators__link" href="#"><span>Открытые вакансии (hh)</span>
+								<svg class="icon icon-arrrow-right ">
+									<use xlink:href="img/svg/sprite.svg#arrrow-right"></use>
+								</svg>
+							</a>
+						</div>
+						<div class="sNumericalIndicators__info-block">
+							<div class="row">
+								<div class="col-lg-6">
+									<div class="sNumericalIndicators__number">200+
 									</div>
-									<div class="event-item__info-block">
-										<div class="event-item__date-block">
-											<div class="event-item__date-number">03
-											</div>
-											<div class="event-item__date-text">Сентября 2022
-											</div>
-										</div>
-										<div class="event-item__caption-wrap">
-											<div class="event-item__title">Проект в&nbsp;&laquo;Сталепромышленной компании&raquo; получил Серебро в&nbsp;конкурсе SAP Quality Awards 2019
-											</div>
-											<div class="event-item__caption">Проект в&nbsp;&laquo;Сталепромышленной компании&raquo; получил Серебро в&nbsp;конкурсе SAP Quality Awards 2019
-											</div>
-											<div class="event-item__link"><span>Хочу пойти</span>
-												<svg class="icon icon-chevron-right ">
-													<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
-												</svg>
-											</div>
-										</div>
+									<div class="sNumericalIndicators__number-caption">консультантов
 									</div>
-								</a>
-								<a class="event-item" href="#">
-									<div class="event-item__pic"><img src="img/event-item.jpg" alt=""/>
+								</div>
+								<div class="col-lg-6">
+									<div class="sNumericalIndicators__number">300+
 									</div>
-									<div class="event-item__info-block">
-										<div class="event-item__date-block">
-											<div class="event-item__date-number">12
-											</div>
-											<div class="event-item__date-text">Августа 2022
-											</div>
-										</div>
-										<div class="event-item__caption-wrap">
-											<div class="event-item__title">Завершено внедрение решения по&nbsp;управлению персоналом для Группы НЛМК
-											</div>
-											<div class="event-item__caption">Компания SAPRUN Group завершила внедрение решения по&nbsp;управлению персоналом на&nbsp;базе SAP ERP Human Capital Management для Группы НЛМК
-											</div>
-											<div class="event-item__link"><span>Хочу пойти</span>
-												<svg class="icon icon-chevron-right ">
-													<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
-												</svg>
-											</div>
-										</div>
+									<div class="sNumericalIndicators__number-caption">сотрудников 
 									</div>
-								</a>
-								<a class="event-item" href="#">
-									<div class="event-item__pic"><img src="img/event-item.jpg" alt=""/>
+								</div>
+								<div class="col-lg-6">
+									<div class="sNumericalIndicators__number">100+
 									</div>
-									<div class="event-item__info-block">
-										<div class="event-item__date-block">
-											<div class="event-item__date-number">21
-											</div>
-											<div class="event-item__date-text">Июля 2022
-											</div>
-										</div>
-										<div class="event-item__caption-wrap">
-											<div class="event-item__title">Платформа S/4HANA запущена в&nbsp;Металлоинвест.
-											</div>
-											<div class="event-item__caption">Проект реализовывался с&nbsp;участием SAPRUN Group. Впервые в&nbsp;России платформа S/4HANA внедрена в&nbsp;масштабе такой компании как Металлоинвест.
-											</div>
-											<div class="event-item__link"><span>Хочу пойти</span>
-												<svg class="icon icon-chevron-right ">
-													<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
-												</svg>
-											</div>
-										</div>
+									<div class="sNumericalIndicators__number-caption">сотрудников работают более&nbsp;5&nbsp;лет
 									</div>
-								</a>
-								<button class="sEventsList__more"><span>Показать ещё</span>
-									<svg class="icon icon-chevron-down ">
-										<use xlink:href="img/svg/sprite.svg#chevron-down"></use>
-									</svg>
-								</button>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</section>
-			<!-- end sEventsList-->
+			<!-- end sNumericalIndicators-->
 			<footer class="footer">
 				<div class="footer__block container">
 					<div class="row">
