--- a/public/04-press-center.html
+++ b/public/04-press-center.html
@@ -461,8 +461,8 @@
 								<div class="end-news-card">
 									<div class="end-news-card__title">Перейти в раздел новости
 									</div>
-									<svg class="icon icon-arrrow-right ">
-										<use xlink:href="img/svg/sprite.svg#arrrow-right"></use>
+									<svg class="icon icon-arrow-right-link ">
+										<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
 									</svg>
 								</div>
 							</div>
