--- a/public/parts/head.html
+++ b/public/parts/head.html
@@ -4,7 +4,7 @@
 </header>
 <!-- end header-->
 <!-- start top-nav-->
-<div class="top-nav"> 
+<div class="top-nav fixed">
 	<div class="row">
 		<div class="col-auto">
 			<div class="toggle-menu-mobile toggle-menu-mobile--js"><span></span>
