sPrinciples start and some fix

--- a/public/02-about.html
+++ b/public/02-about.html
@@ -13,7 +13,7 @@
 		<link href="libs/@fancyapps/ui/fancybox.css" rel="stylesheet"/>
 		<link href="css/main.min.css" rel="stylesheet"/>
 	</head>
-	<body class="main-page page-fixed-video">
+	<body>
 		<div class="main-wrapper">
 			<div class="menu-mobile menu-mobile--js">
 				<div class="top-nav"> 
