--- a/public/05-work.html
+++ b/public/05-work.html
@@ -13,7 +13,7 @@
 		<link href="libs/@fancyapps/ui/fancybox.css" rel="stylesheet"/>
 		<link href="css/main.min.css" rel="stylesheet"/>
 	</head>
-	<body class="main-page">
+	<body>
 		<div class="main-wrapper">
 			<div class="menu-mobile menu-mobile--js">
 				<div class="top-nav"> 
@@ -293,6 +293,16 @@
 				</div>
 			</section>
 			<!-- end sNumericalIndicators-->
+			<!-- start sPrinciples-->
+			<section class="sPrinciples section bg-white section section--vh" id="sPrinciples">
+				<div class="container">
+					<div class="section-title text-center">
+						<h2>sPrinciples</h2>
+					</div>
+					<div class="row"></div>
+				</div>
+			</section>
+			<!-- end sPrinciples-->
 			<footer class="footer">
 				<div class="footer__block container">
 					<div class="row">
