--- a/public/03-status.html
+++ b/public/03-status.html
@@ -13,7 +13,7 @@
 		<link href="libs/@fancyapps/ui/fancybox.css" rel="stylesheet"/>
 		<link href="css/main.min.css" rel="stylesheet"/>
 	</head>
-	<body class="main-page page-fixed-video">
+	<body>
 		<div class="main-wrapper">
 			<div class="menu-mobile menu-mobile--js">
 				<div class="top-nav"> 
@@ -200,7 +200,7 @@
 				</div>
 				<div class="container">
 					<div class="headerBlock__inner">
-						<h1>Статусы и награды </h1>
+						<h1>Статусы и награды</h1>
 						<p>Входим в&nbsp;TOP-10 крупнейших поставщиков BI-решений в&nbsp;России 2020, в&nbsp;TOP-5 аутсорсеров поддержки решений SAP в&nbsp;России по&nbsp;версии аналитического центра TAdviser</p>
 					</div>
 				</div>
