sPrinciples in work

--- a/public/05-work.html
+++ b/public/05-work.html
@@ -296,10 +296,68 @@
 			<!-- start sPrinciples-->
 			<section class="sPrinciples section bg-white section section--vh" id="sPrinciples">
 				<div class="container">
-					<div class="section-title text-center">
-						<h2>sPrinciples</h2>
+					<div class="section-title">
+						<h2>наши принципы</h2>
 					</div>
-					<div class="row"></div>
+					<div class="sPrinciples__slider sPrinciples__slider--js swiper">
+						<div class="swiper-wrapper">
+							<div class="sPrinciples__slide swiper-slide">
+								<div class="sAboutCaptionItem">
+									<div class="sAboutCaptionItem__pic"><img src="img/svg/sAboutCaption-2.svg" alt=""/>
+									</div>
+									<div class="sAboutCaptionItem__title">Мы команда
+									</div>
+									<div class="sAboutCaptionItem__text">Уважаем, ценим и&nbsp;помогаем друг другу. У&nbsp;нас принято говорить &laquo;Спасибо&raquo;
+									</div>
+								</div>
+								<div class="sAboutCaptionItem">
+									<div class="sAboutCaptionItem__pic"><img src="img/svg/sPrinciples-1.svg" alt=""/>
+									</div>
+									<div class="sAboutCaptionItem__title">Мы поощряем инициативу
+									</div>
+									<div class="sAboutCaptionItem__text">Поддерживаем сотрудников, которые не&nbsp;боятся брать на&nbsp;себя&nbsp;ответственность
+									</div>
+								</div>
+							</div>
+							<div class="sPrinciples__slide swiper-slide">
+								<div class="sAboutCaptionItem">
+									<div class="sAboutCaptionItem__pic"><img src="img/svg/sPrinciples-2.svg" alt=""/>
+									</div>
+									<div class="sAboutCaptionItem__title">Мы не ищем виноватых и правых
+									</div>
+									<div class="sAboutCaptionItem__text">Находим цель и&nbsp;стараемся достичь ее&nbsp;максимально простыми и&nbsp;быстрыми&nbsp;путями
+									</div>
+								</div>
+								<div class="sAboutCaptionItem">
+									<div class="sAboutCaptionItem__pic"><img src="img/svg/sPrinciples-3.svg" alt=""/>
+									</div>
+									<div class="sAboutCaptionItem__title">Мы профессионалы и эксперты
+									</div>
+									<div class="sAboutCaptionItem__text">Не&nbsp;просто внедряем технологии, мы&nbsp;ищем&nbsp;и&nbsp;реализуем сценарии их&nbsp;лучшего&nbsp;использования
+									</div>
+								</div>
+							</div>
+							<div class="sPrinciples__slide swiper-slide">
+								<div class="sAboutCaptionItem">
+									<div class="sAboutCaptionItem__pic"><img src="img/svg/sAboutCaption-3.svg" alt=""/>
+									</div>
+									<div class="sAboutCaptionItem__title">Мы предлагаем возможности 
+									</div>
+									<div class="sAboutCaptionItem__text">Возможности для карьерного роста, профессионального развития и&nbsp;самореализации
+									</div>
+								</div>
+								<div class="sAboutCaptionItem">
+									<div class="sAboutCaptionItem__pic"><img src="img/svg/sPrinciples-4.svg" alt=""/>
+									</div>
+									<div class="sAboutCaptionItem__title">Мы проявляем заботу 
+									</div>
+									<div class="sAboutCaptionItem__text">Вас всегда поддержит и&nbsp;воодушевит талантливая и&nbsp;неравнодушная команда&nbsp;HR
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-scrollbar"></div>
+					</div>
 				</div>
 			</section>
 			<!-- end sPrinciples-->
