--- a/public/05-work.html
+++ b/public/05-work.html
@@ -161,6 +161,10 @@
 				</div>
 			</div>
 			<!--  мобильное меню-->
+			<video class="bg-video" preload="auto" autoplay="autoplay" loop="loop" playsinline="playsinline" muted="muted" poster="img/poster.webp">
+				<source src="video/video.webm" type="video/webm">
+				<source src="video/video.mp4" type="video/mp4">
+			</video>
 			<!-- start top-nav-->
 			<div class="top-nav fixed">
 				<div class="row">
@@ -262,8 +266,8 @@
 							<div class="sNumericalIndicators__caption">Более 13&nbsp;лет работаем над тем, чтобы быть лучшей консалтинговой компанией в&nbsp;сфере внедрения ИТ-решений для бизнеса
 							</div>
 							<a class="sNumericalIndicators__link" href="#"><span>Открытые вакансии (hh)</span>
-								<svg class="icon icon-arrrow-right ">
-									<use xlink:href="img/svg/sprite.svg#arrrow-right"></use>
+								<svg class="icon icon-arrow-right-link ">
+									<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
 								</svg>
 							</a>
 						</div>
@@ -361,6 +365,98 @@
 				</div>
 			</section>
 			<!-- end sPrinciples-->
+			<!-- start sWorkConditions-->
+			<section class="sWorkConditions section bg-dark section section--vh" id="sWorkConditions">
+				<div class="container">
+					<div class="section-title">
+						<h2>Условия работы</h2>
+					</div>
+					<div class="sWorkConditions__wrap">
+						<div class="sWorkConditions__caption">Более 13&nbsp;лет работаем над тем, чтобы быть лучшей консалтинговой компанией в&nbsp;сфере внедрения ИТ-решений для бизнеса
+						</div>
+						<a class="sWorkConditions__link" href="https://hh.ru/employer/60444" target="_blank"><span>Смотреть&nbsp;все&nbsp;вакансии</span>
+							<svg class="icon icon-arrow-right-link ">
+								<use xlink:href="img/svg/sprite.svg#arrow-right-link"></use>
+							</svg>
+						</a>
+					</div>
+					<div class="row">
+								<div class="col-lg-4">
+									<div class="sWorkConditions__item">
+										<div class="sWorkConditions__item-icon"><img src="img/svg/sWorkConditions-1.svg" alt=""/>
+										</div>
+										<div class="sWorkConditions__item-caption">ДМС со стоматологией
+										</div>
+									</div>
+								</div>
+								<div class="col-lg-4">
+									<div class="sWorkConditions__item">
+										<div class="sWorkConditions__item-icon"><img src="img/svg/sWorkConditions-2.svg" alt=""/>
+										</div>
+										<div class="sWorkConditions__item-caption">Корпоративная мобильная связь
+										</div>
+									</div>
+								</div>
+								<div class="col-lg-4">
+									<div class="sWorkConditions__item">
+										<div class="sWorkConditions__item-icon"><img src="img/svg/sWorkConditions-3.svg" alt=""/>
+										</div>
+										<div class="sWorkConditions__item-caption">Программа признания «Спасибо тебе»
+										</div>
+									</div>
+								</div>
+								<div class="col-lg-4">
+									<div class="sWorkConditions__item">
+										<div class="sWorkConditions__item-icon"><img src="img/svg/sWorkConditions-4.svg" alt=""/>
+										</div>
+										<div class="sWorkConditions__item-caption">Возможность работать удаленно или в офисе
+										</div>
+									</div>
+								</div>
+								<div class="col-lg-4">
+									<div class="sWorkConditions__item">
+										<div class="sWorkConditions__item-icon"><img src="img/svg/sWorkConditions-5.svg" alt=""/>
+										</div>
+										<div class="sWorkConditions__item-caption">Корпоративное обучение
+										</div>
+									</div>
+								</div>
+								<div class="col-lg-4">
+									<div class="sWorkConditions__item">
+										<div class="sWorkConditions__item-icon"><img src="img/svg/sWorkConditions-6.svg" alt=""/>
+										</div>
+										<div class="sWorkConditions__item-caption">Мотивационная программа SAPRUN
+										</div>
+									</div>
+								</div>
+								<div class="col-lg-4">
+									<div class="sWorkConditions__item">
+										<div class="sWorkConditions__item-icon"><img src="img/svg/sWorkConditions-7.svg" alt=""/>
+										</div>
+										<div class="sWorkConditions__item-caption">Разговорный клуб английского языка
+										</div>
+									</div>
+								</div>
+								<div class="col-lg-4">
+									<div class="sWorkConditions__item">
+										<div class="sWorkConditions__item-icon"><img src="img/svg/sWorkConditions-8.svg" alt=""/>
+										</div>
+										<div class="sWorkConditions__item-caption">Корпоративные традиции и вдохновляющие мероприятия
+										</div>
+									</div>
+								</div>
+								<div class="col-lg-4">
+									<div class="sWorkConditions__item">
+										<div class="sWorkConditions__item-icon"><img src="img/svg/sWorkConditions-9.svg" alt=""/>
+										</div>
+										<div class="sWorkConditions__item-caption">Дополнительный день отпуска после первого года работы
+										</div>
+									</div>
+								</div>
+					</div>
+				</div>
+			</section>
+			<!-- end sWorkConditions-->
 			<footer class="footer">
 				<div class="footer__block container">
 					<div class="row">
