--- a/public/03-status.html
+++ b/public/03-status.html
@@ -161,6 +161,10 @@
 				</div>
 			</div>
 			<!--  мобильное меню-->
+			<video class="bg-video" preload="auto" autoplay="autoplay" loop="loop" playsinline="playsinline" muted="muted" poster="img/poster.webp">
+				<source src="video/video.webm" type="video/webm">
+				<source src="video/video.mp4" type="video/mp4">
+			</video>
 			<!-- start top-nav-->
 			<div class="top-nav fixed">
 				<div class="row">
