--- a/public/02-about.html
+++ b/public/02-about.html
@@ -236,7 +236,7 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-lg-6">
+						<div class="col-md-6">
 							<div class="sAboutCaptionItem">
 								<div class="sAboutCaptionItem__pic"><img src="img/svg/sAboutCaption-1.svg" alt=""/>
 								</div>
@@ -246,7 +246,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-lg-6">
+						<div class="col-md-6">
 							<div class="sAboutCaptionItem">
 								<div class="sAboutCaptionItem__pic"><img src="img/svg/sAboutCaption-2.svg" alt=""/>
 								</div>
@@ -256,7 +256,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-lg-6">
+						<div class="col-md-6">
 							<div class="sAboutCaptionItem">
 								<div class="sAboutCaptionItem__pic"><img src="img/svg/sAboutCaption-3.svg" alt=""/>
 								</div>
@@ -266,7 +266,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-lg-6">
+						<div class="col-md-6">
 							<div class="sAboutCaptionItem">
 								<div class="sAboutCaptionItem__pic"><img src="img/svg/sAboutCaption-4.svg" alt=""/>
 								</div>
