--- a/public/index.html
+++ b/public/index.html
@@ -342,7 +342,7 @@
 			<!-- start sEvents-->
 			<section class="sEvents section bg-dark section section--vh" id="sEvents"> 
 				<div class="container">
-					<div class="section-title text-center">
+					<div class="section-title text-md-center">
 						<h2>Ближайшие мероприятия</h2>
 					</div>
 					<div class="sEvents__row row">
@@ -632,7 +632,7 @@
 			<!-- start sTrust-->
 			<section class="sTrust section bg-dark section section--vh" id="sTrust">
 				<div class="container">
-					<div class="section-title text-center">
+					<div class="section-title text-md-center">
 						<h2>Нам доверяют</h2>
 					</div>
 					<div class="tabs">
