--- a/public/13-article.html
+++ b/public/13-article.html
@@ -9,6 +9,7 @@
 		<link type="image/ico" href="img/favicon.ico" rel="shortcut icon"><meta name="format-detection" content="telephone=no"> <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;500;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
 		<link href="libs/swiper/swiper-bundle.min.css" rel="stylesheet"/>
 		<link href="libs/@fancyapps/ui/fancybox.css" rel="stylesheet"/>
 		<link href="css/main.min.css" rel="stylesheet"/>
@@ -211,7 +212,7 @@
 				</div>
 				<div class="container container--small mb-56">
 					<p class="h4 mb-32">Donec pellentesque efficitur dui, id&nbsp;dictum ex&nbsp;aliquam&nbsp;id. Vivamus imperdiet pretium odio sit amet laoreet. Vivamus nec velit volutpat quam laoreet lobortis a&nbsp;sed est.</p>
-					<p class="fw-light">Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo. Donec non purus venenatis, congue lectus nec, volutpat dui. Donec non orci et justo pulvinar tincidunt et vel enim. Cras at nulla massa. Nulla metus enim, consequat eu ante vel, posuere tempor massa. Vestibulum viverra luctus posuere.</p>
+					<p class="fw-light mb-0">Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo. Donec non purus venenatis, congue lectus nec, volutpat dui. Donec non orci et justo pulvinar tincidunt et vel enim. Cras at nulla massa. Nulla metus enim, consequat eu ante vel, posuere tempor massa. Vestibulum viverra luctus posuere.</p>
 				</div>
 				<div class="container container--large mb-56">
 					<div class="sContent__mediaContent"><img class="object-fit-js" src="img/article-img-1.jpg" alt="" loading="lazy"/>
@@ -222,7 +223,7 @@
 					<p class="fw-light mb-0">Quisque ut&nbsp;consectetur risus, in&nbsp;rhoncus urna. Aenean pellentesque, velit id&nbsp;suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo. Donec non purus venenatis, congue lectus nec, volutpat dui. Donec non orci et&nbsp;justo pulvinar tincidunt et&nbsp;vel enim. Cras at&nbsp;nulla massa. Nulla metus enim, consequat eu&nbsp;ante vel, posuere tempor massa. Vestibulum viverra luctus posuere.</p>
 				</div>
 				<div class="container container--small mb-56">
-					<ul>
+					<ul class="sContent__default-list">
 						<li>Proin mollis libero quis lacus posuere, sit amet varius nunc fringilla</li>
 						<li>In posuere, augue eget ornare congue, eros ex bibendum
 							<ul>
@@ -272,11 +273,92 @@
 							</table>
 						</div>
 				</div>
-				<div class="container container--small mb-56">
+				<div class="container container--large mb-32">
+					<blockquote>
+						<h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec gravida magna ac vehicula volutpat.</h4>
+						<cite>Алексей Литвин<span>Директор</span></cite>
+					</blockquote>
+				</div>
+				<div class="container container--small mb-32">
 					<h3 class="mb-32">H3 Header two line words description</h3>
 					<p class="mb-0">Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo. Donec non purus venenatis, congue lectus nec, volutpat dui. Donec non orci et justo pulvinar tincidunt et vel enim. Cras at nulla massa. Nulla metus enim, consequat eu ante vel, posuere tempor massa. Vestibulum viverra luctus posuere.</p>
 				</div>
-				<div class="container container--small mb-56"></div>
+				<div class="container container--small mb-56">
+					<ol class="sContent__num-list">
+						<li>Nam luctus orci non suscipit mollis</li>
+						<li>Proin suscipit placerat turpis, vitae fermentum turpis auctor vel
+							<ol>
+								<li>Donec scelerisque massa nec sapien tempus consectetur</li>
+								<li>Morbi vehicula mauris neque</li>
+							</ol>
+						</li>
+						<li>Quisque aliquet nibh nec egestas faucibus</li>
+					</ol>
+				</div>
+				<div class="container container--small mb-56">
+					<div class="sContent__sliderContainer">
+						<div class="sContent__slider sContent__slider--js swiper">
+							<div class="swiper-wrapper">
+									<div class="sContent__slide swiper-slide">
+										<div class="sContent__item"><img class="object-fit-js" src="img/article-img-3.jpg" alt="" loading="lazy"/>
+										</div>
+									</div>
+									<div class="sContent__slide swiper-slide">
+										<div class="sContent__item"><img class="object-fit-js" src="img/article-img-3.jpg" alt="" loading="lazy"/>
+										</div>
+									</div>
+									<div class="sContent__slide swiper-slide">
+										<div class="sContent__item"><img class="object-fit-js" src="img/article-img-3.jpg" alt="" loading="lazy"/>
+										</div>
+									</div>
+							</div>
+						</div>
+						<div class="sContent__arrow-wrap">
+							<div class="swiper-button-hand swiper-button-hand-prev swiper-button-prev">
+								<svg class="icon icon-chevron-left ">
+									<use xlink:href="img/svg/sprite.svg#chevron-left"></use>
+								</svg>
+							</div>
+							<div class="swiper-button-hand swiper-button-hand-next swiper-button-next">
+								<svg class="icon icon-chevron-right ">
+									<use xlink:href="img/svg/sprite.svg#chevron-right"></use>
+								</svg>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="container container--small mb-56">
+					<h4 class="mb-32">H4 Header two line words description</h4>
+					<h5>H5 Header two line words description</h5>
+					<p class="mb-0">Quisque ut consectetur risus, in rhoncus urna. Aenean pellentesque, velit id suscipit pharetra, tortor est egestas dolor, non congue sem nunc quis leo. Donec non purus venenatis, congue lectus nec, volutpat dui. Donec non orci et justo pulvinar tincidunt et vel enim. Cras at nulla massa. Nulla metus enim, consequat eu ante vel, posuere tempor massa. Vestibulum viverra luctus posuere.</p>
+				</div>
+				<div class="container container--small mb-32">
+					<div class="share-block">
+						<p>Поделиться</p>
+						<div class="soc">
+							<a class="soc__item" href="#" target="_blank">
+								<svg class="icon icon-vk2 ">
+									<use xlink:href="img/svg/sprite.svg#vk2"></use>
+								</svg>
+							</a>
+							<a class="soc__item" href="#" target="_blank">
+								<svg class="icon icon-in2 ">
+									<use xlink:href="img/svg/sprite.svg#in2"></use>
+								</svg>
+							</a>
+							<a class="soc__item" href="#" target="_blank">
+								<svg class="icon icon-whatsapp2 ">
+									<use xlink:href="img/svg/sprite.svg#whatsapp2"></use>
+								</svg>
+							</a>
+							<a class="soc__item" href="#" target="_blank">
+								<svg class="icon icon-telegram2 ">
+									<use xlink:href="img/svg/sprite.svg#telegram2"></use>
+								</svg>
+							</a>
+						</div>
+					</div>
+				</div>
 			</section>
 			<!-- end sContent-->
 			<footer class="footer">
